feat(doc): 根据错误码修正Swagger文档
